# vvReader

./: README.org  index.html  reader_ui.js  sw.js  vvreader_ui.js
.github/workflows/: pages.yml
reader_ui/: Cargo.toml  Trunk.toml  index.html  run.sh
reader_ui/assets/: sw.js
reader_ui/src/: app.rs  lib.rs  main.rs
reader_ui/src/app/: account.rs  communicate.rs  documentFormat.rs  donate.rs  md_editor_render.rs  password.rs  text_selection_widget.rs  utils.rs
reader_ui/src/easy_mark/: easy_mark_editor.rs  easy_mark_highlighter.rs  mod.rs
text_parser/: Cargo.toml
text_parser/src/: format.rs  lib.rs  main.rs  parse_docx.rs  parse_epub.rs  parse_md.rs  parse_text.rs  route_parser.rs
text_parser/src/route_parser/: parse_docx.rs  parse_epub.rs  parse_md.rs
