[package]
name = "text_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex ={version="1.10"}

[[bin]]
name="main"
path="src/main.rs"
test=true
bench=false

# [[bin]]
# name="parse_txt"
# path="src/parse_text.rs"
# test=true
# bench=false