[package]
name = "text_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex ={version="1.10"}
# epub ={version="1.2"}
epubparse ={version="0.2"}
docx-rust={version="0.1.5"}

[[bin]]
name="main"
path="src/main.rs"
test=true
bench=false

# [[bin]]
# name="parse_txt"
# path="src/parse_text.rs"
# test=true
# bench=false

# [[bin]]
# name="parse_epub"
# path="src/parse_epub.rs"
# test=true
# bench=false

[[bin]]
name="parse_docx"
path="src/parse_docx.rs"
test=true
bench=false